<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_marginTop="10dip"
android:background="@android:color/white"
android:orientation="vertical"
android:paddingBottom="25dip"
android:paddingLeft="20dip"
android:paddingRight="20dip"
android:paddingTop="25dip" >

<LinearLayout
    android:id="@+id/login_input_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dip" >

        <ImageView
            android:id="@+id/login_image_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/icon_mobile_phone" />

        <ImageView
            android:visibility="gone"
            android:layout_marginRight="15dp"
            android:id="@+id/iv_clear_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/icon_login_cancel" />

        <EditText
            android:id="@+id/et_input_phone"
            style="@style/login_edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/iv_clear_phone"
            android:layout_toRightOf="@id/login_image_username"
            android:background="@color/transparent"
            android:digits="0123456789"
            android:hint="@string/bingding_phone_hint"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:text="hasty@sina.cn"
            android:singleLine="true" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/spliter" />

    <RelativeLayout
        android:id="@+id/bingdingphone_verify_cod"
        android:layout_width="fill_parent"
        android:layout_height="45dip" >

        <TextView
            android:id="@+id/tv_fetch_vertify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_rectangle_white_gray_verify"
            android:clickable="true"
            android:gravity="center"
            android:minWidth="90dip"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:text="@string/get_verify_code"
            android:textColor="@color/green_00a651"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@id/tv_fetch_vertify" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:layout_alignParentBottom="true"
                android:background="@color/spliter" />

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/icon_verification_code" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/iv_icon_clear_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/icon_login_cancel" />

            <EditText
                android:id="@+id/et_input_vertify_number"
                style="@style/login_edit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@+id/iv_icon_clear_verify"
                android:layout_toRightOf="@id/iv_icon"
                android:background="@color/transparent"
                android:digits="0123456789"
                android:hint="@string/verify_code_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:singleLine="true" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:id="@+id/ll_agreement"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/login_input_layout"
    android:layout_marginBottom="13dp"
    android:layout_marginTop="13dp"
    android:gravity="center_vertical" >

    <TextView
        android:textSize="@dimen/txt_size_first"
        android:textStyle="bold"
        android:textColor="@color/orange_ff860f"
        android:text="@string/tips_womai"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    <TextView
        android:lineSpacingExtra="13dp"
        android:textSize="@dimen/txt_size_second"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/warn_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</LinearLayout>

<Button
    android:id="@+id/btn_ok"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/view_login_hei"
    android:layout_below="@id/ll_agreement"
    android:layout_marginTop="60dp"
    android:background="@drawable/shape_rectangle_white_gray_verify"
    android:text="@string/title_login"
    android:textColor="@color/white"
    android:textSize="15sp" />

</RelativeLayout>